--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/juliq/ext-weekend-movie-project#readme",
   "dependencies": {
+    "angular-material": "^1.1.10",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "pg": "^7.4.3"
