--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/juliq/ext-weekend-movie-project#readme",
   "dependencies": {
+    "angular": "^1.7.4",
     "angular-material": "^1.1.10",
+    "angular-route": "^1.7.4",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "pg": "^7.4.3"
